@@ -1,0 +1,9 @@
+Build.PL
+Changes
+dist.ini
+lib/Dist/Zilla/PluginBundle/Author/DOHERTY.pm
+Makefile.PL
+MANIFEST			This list of files
+MANIFEST.SKIP
+README
+README.mkdn
