@@ -3,7 +3,7 @@ NAME
     DOHERTY
 
 VERSION
-    version 0.32
+    version 0.33
 
 SYNOPSIS
         # in dist.ini
@@ -17,11 +17,9 @@ USAGE
     Just put "[@Author::DOHERTY]" in your dist.ini. You can supply the
     following options:
 
-    *   "makemaker" specifies whether to generate a standard
-        ExtUtils::MakeMaker build tool. Default is true.
-
-    *   "modulebuild" specifies whether to generate a standard Module::Build
-        build tool. Default is true.
+    *   "custom_build" specifies to use
+        Dist::Zilla::Plugin::ModuleBuild::Custom instead of generating
+        boilerplate ExtUtils::MakeMaker and Module::Build build tools.
 
     *   "fake_release" specifies whether to use "FakeRelease" instead of
         "UploadToCPAN".
