@@ -9,7 +9,7 @@ twitter = 0
 github = 0
 
 [Prereqs]
-Dist::Zilla                                 = 4.102341 ; dzil authordeps
+Dist::Zilla                                 = 4.300030 ; GatherDir is less fuzzy
 Dist::Zilla::Plugin::CheckChangesHasContent = 0
 Dist::Zilla::Plugin::CheckExtraTests        = 0
 Dist::Zilla::Plugin::Git::CheckFor::CorrectBranch = 0
